packages/astro/e2e/fixtures/errors/src/pages/solid-syntax-error.astro
---
import SolidSyntaxError from '../components/solid/SolidSyntaxError.jsx';
---

<div>
  <SolidSyntaxError />
</div>
